# gstreamer-opencv-object-detector

./: .gitignore  Dockerfile  docker-compose.yml  readme.md
cpp/: CMakeLists.txt  Dockerfile  readme.md
cpp/src/: main.cpp
cpp/src/gstreamer/: gstimageblur.cpp  gstimageblur.h
python/: Dockerfile
python/src/: demo.py
python/src/lib/: GstPipeline.py
python/src/lib/plugins/: GstGaussianBlur.py
tutorials/: simple-streaming.md
